[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.0"
solana-account-decoder = "2.1.6"
solana-client = "2.1.6"
solana-program = "2.1.6"
solana-rpc-client-api = "2.1.6"
solana-sdk = "2.1.6"
solana-transaction-status = "2.1.6"
tokio = { version = "1.44.2", features = [
	"macros",
	"rt-multi-thread",
	"net",
	"time",
] }
tokio-stream = "0.1.15"
tokio-tungstenite = "0.24.0"
helius = "0.2.6"


tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
	"env-filter",
	"fmt",
	"ansi",
	"json",
	"tracing-log",
] }
